<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gredienslog"
    tools:context="com.reidiens.login.Loginpg"
    android:id="@+id/loginpg">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:backgroundTint="#FFFFFF"
        android:singleLine="false"
        android:autoLink="none"
        android:allowUndo="true"
        android:hint="@string/email"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_marginTop="178dp"
        android:textSize="25sp"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass"
        android:layout_alignTop="@+id/email"
        android:layout_marginTop="64dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:layout_alignEnd="@+id/email"
        android:layout_alignStart="@+id/email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgotpass"
        android:id="@+id/fpass"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/pass"
        android:layout_alignEnd="@+id/pass"
        android:textSize="25sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginmn"
        android:id="@+id/register"
        android:layout_below="@+id/fpass"
        android:layout_marginTop="42dp"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="#FE2E2E"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignEnd="@+id/email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dhacc"
        android:id="@+id/dhacc"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signup"
        android:id="@+id/sgup"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:layout_alignTop="@+id/dhacc"
        android:layout_toEndOf="@+id/dhacc"
        android:layout_alignParentBottom="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/lglogo" />


</RelativeLayout>
